k8s/services.yml
apiVersion: v1
kind: Service
metadata:
  name: ecommerce-api-service
spec:
  type: ClusterIP
  selector:
    app: ecommerce-api
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
    - name: https
      protocol: TCP
      port: 443
      targetPort: 443

---
apiVersion: v1
kind: Service
metadata:
  name: ecommerce-ui-service
spec:
  type: ClusterIP
  selector:
    app: ecommerce-ui
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
    - name: https
      protocol: TCP
      port: 443
      targetPort: 443
