k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ecommerce-ingress
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  tls:
  - hosts:
    - ecommerce.codesmithing.io
    secretName: ecommerce-tls
  rules:
    - host: ecommerce.codesmithing.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ecommerce-ui-service
                port:
                  number: 80
    - host: ecommerce-api.codesmithing.io
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: ecommerce-api-service
                port:
                  number: 80
